fix: height stretch in firefox

--- a/apps/code-review/src/app/pages/overview/overview.component.scss
+++ b/apps/code-review/src/app/pages/overview/overview.component.scss
@@ -3,6 +3,11 @@
     height: stretch;
     display: flex;
     flex-direction: column;
+
+    @supports (-moz-appearance: none) {
+        height: 100%;
+        min-height: -moz-available;
+    }
 }
 
 .container {
