--- a/apps/code-review/src/app/remote-entry/entry.component.scss
+++ b/apps/code-review/src/app/remote-entry/entry.component.scss
@@ -4,4 +4,9 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+
+    @supports (-moz-appearance: none) {
+        height: 100%;
+        min-height: -moz-available;
+    }
 }
